Expanded crout template. Fixed header logo spacing.

--- a/app/views/crouts/crout.sass
+++ b/app/views/crouts/crout.sass
@@ -19,78 +19,151 @@
   #left_column
     float: left
     color: #111
-    width: 700px
+    width: 600px
     z-index: 3
 
-  .story_pic
-    position: relative
-    display: inline-block
-    vertical-align: middle
-    border: none
-    float: left
-    z-index: 3
-    padding: 20px 20px 40px 0
-    img
-      width: 300px
+    .story_pic
+      position: relative
+      display: inline-block
+      vertical-align: middle
+      border: none
+      float: left
+      z-index: 3
+      padding: 20px 20px 40px 0
+      img
+        width: 300px
 
-  #art_credit
-    position: absolute
-    font-size: .9em
-    bottom: 20px
-    left: 90px
+    #doris
+      height: 496px
+      width: 430px
+      margin: 0 0 20px 0
+      background: url(../images/image-doris.jpg) no-repeat 0px 0px
 
-  #first_letter
-    font-size: 48px
-    font-weight: 100
-    font-family: Georgia
+    #art_credit
+      position: absolute
+      font-size: .9em
+      bottom: 20px
+      left: 90px
 
-  p
-    margin: 20px 0
-    padding: 0
-    line-height: 26px
-    text-align: justify
-    + p
-      text-indent: 30px
+    #first_letter
+      font-size: 48px
+      font-weight: 100
+      font-family: Georgia
 
-  #first_p
-    margin-top: 0px
+    p
+      margin: 20px 0
+      padding: 0
+      line-height: 26px
+      text-align: justify
+      + p
+        text-indent: 30px
+
+    #first_p
+      margin-top: 25px
 
   #right_column
-    font-size: 14px
     float: right
-    width: 200px
+    width: 300px
     margin: 10px 0 0 0
     z-index: 3
 
-  #about_author
-    font-size: 14px
-    float: left
-    width: 200px
-    background: #FFF
-    padding: 25px 10px
-    margin: 00px 0 0 0
-    -moz-box-shadow: 0 0 5px #666
-    -webkit-box-shadow: 0 0 5px #666
-    box-shadow: 0 0 5px #666
-    z-index: 3
-    h3
-      margin: 0 0 10px 0
-      padding: 0
+    #remix
+      float: left
+      background: #FFF
+      padding: 10px 10px
+      margin: 10px 0
+      @include box-shadow(0, 0, 5px, 0, #666)
+      #remix_header
+        #logo
+          margin: 0 10px 0 0
+          float: left
+          @include sprite
+          height: 80px
+          width: 98px
+          background: url(/images/logo_small.png) no-repeat 0px 0px
+        #remix_header_text
+          float: right
+          width: 175px
+          h4
+            font-size: $largest
+            font-weight: 100
+            line-height: 2em
+
+          h3
+            font-size: $giant
+            font-weight: 100
+            color: $blue
+
+
+      #activities
+        .activity
+          font-size: 13px
+          margin: 5px 0 0 0
+          border: 1px solid $darkgrey
+          @include radius(5px)
+          @include linear-gradient ($white, $lightgrey)
+          .activity_pic
+            margin: 5px
+            float: left
+            img
+              width: 50px
+          .activity_content
+            p
+              line-height: 1.05em
+              margin: 5px 0
+              padding: 0
+            .summary
+              .actor
+                font-weight: 600
+              .verb
+                color: $darkgrey
+              .object
+                color: $blue
+            .details
+              color: $darkgrey
+            .timestamp
+              color: $darkgrey
+          .actor_icon
+            img
+              width: 30px
+
+      .buttons
+        text-align: center
+        .join
+          margin: 10px 0
+          @include sprite
+          height: 52px
+          width: 206px
+          background: url(/images/button-remix--sprite.png) no-repeat 0px 0px
+          &:hover
+            background-position: 0 -52px
+        .watch
+          @include sprite
+          height: 52px
+          width: 206px
+          background: url(/images/button-signup-sprite.png) no-repeat 0px 0px
+          &:hover
+            background-position: 0 -52px
+
+
+    #about_author
       font-size: 14px
-      border-bottom: 1px solid #ddd
-    img
-      width: 200px
-    p
-      color: #666
-      text-align: justify
-      margin: 0
-      padding: 0
+      float: left
+      background: #FFF
+      padding: 25px 10px
+      margin: 20px 0
+      @include box-shadow(0, 0, 5px, 0, #666)
+      z-index: 3
+      h3
+        margin: 0 0 10px 0
+        padding: 0
+        font-size: 14px
+        border-bottom: 1px solid #ddd
+      img
+        width: 200px
+      p
+        color: #666
+        text-align: justify
+        margin: 0
+        padding: 0
 
-  #doris
-    height: 496px
-    width: 430px
-    margin: 0 0 20px 0
-    background: url(../images/image-doris.jpg) no-repeat 0px 0px
-
-  #first_letter
-    color: #fff
