--- a/app/views/layouts/_header.sass
+++ b/app/views/layouts/_header.sass
@@ -33,7 +33,7 @@ header
       h1
         position: absolute
         top: 40px
-        left: 95px
+        left: 115px
         margin: 0 0 0 0
         font-family: 'Helvetica'
         font-size: 24px
