--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -110,13 +110,13 @@ h1 {
   margin: 20px; }
 
 h2 {
-  font-size: 1.6em;
+  font-size: 1.7em;
   margin: 20px;
   font-weight: 100; }
 
 p {
   margin: 20px;
-  line-height: 1.6em; }
+  line-height: 1.7em; }
 
 .bold {
   font-weight: 500px; }
@@ -233,7 +233,7 @@ header {
       header header_inner a#home_link h1 {
         position: absolute;
         top: 40px;
-        left: 95px;
+        left: 115px;
         margin: 0 0 0 0;
         font-family: "Helvetica";
         font-size: 24px;
