--- a/public/stylesheets/landing_pages.css
+++ b/public/stylesheets/landing_pages.css
@@ -110,13 +110,13 @@ h1 {
   margin: 20px; }
 
 h2 {
-  font-size: 1.6em;
+  font-size: 1.7em;
   margin: 20px;
   font-weight: 100; }
 
 p {
   margin: 20px;
-  line-height: 1.6em; }
+  line-height: 1.7em; }
 
 .bold {
   font-weight: 500px; }
