--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -110,13 +110,13 @@ h1 {
   margin: 20px; }
 
 h2 {
-  font-size: 1.6em;
+  font-size: 1.7em;
   margin: 20px;
   font-weight: 100; }
 
 p {
   margin: 20px;
-  line-height: 1.6em; }
+  line-height: 1.7em; }
 
 .bold {
   font-weight: 500px; }
@@ -215,7 +215,7 @@ p {
       margin: 40px 0 0 0;
       text-align: left;
       font-family: "Helvetica";
-      font-size: 1.5em;
+      font-size: 1.6em;
       font-weight: 100;
       color: #666666; }
     #new_signup #new_signup_inner #signup_form #fields {
@@ -225,7 +225,7 @@ p {
       #new_signup #new_signup_inner #signup_form #fields #signup_field_name #signup_name {
         width: 250px;
         font-family: "Arial";
-        font-size: 1.5em;
+        font-size: 1.6em;
         color: #666666; }
       #new_signup #new_signup_inner #signup_form #fields #signup_field_email label {
         display: none; }
@@ -233,7 +233,7 @@ p {
         margin: 10px 0 0 0;
         width: 250px;
         font-family: "Arial";
-        font-size: 1.5em;
+        font-size: 1.6em;
         color: #666666; }
     #new_signup #new_signup_inner #signup_form .actions {
       margin: 20px 0 0 0; }
@@ -282,7 +282,7 @@ p {
       margin: 40px 0 0 0;
       text-align: left;
       font-family: "Helvetica";
-      font-size: 1.6em;
+      font-size: 1.7em;
       font-weight: 100; }
     #new_invitation #new_invitation_inner p.additional_info {
       margin: 30px 0 0 0;
@@ -290,7 +290,7 @@ p {
       padding-top: 20px;
       text-align: left;
       font-family: "Helvetica";
-      font-size: 1.3em;
+      font-size: 1.5em;
       font-weight: 100;
       color: #666666; }
     #new_invitation #new_invitation_inner #invitation_form #fields {
@@ -301,7 +301,7 @@ p {
         margin: 10px 0 0 0;
         width: 250px;
         font-family: "Arial";
-        font-size: 1.5em;
+        font-size: 1.6em;
         color: #666666; }
       #new_invitation #new_invitation_inner #invitation_form #fields #invitation_field_email label {
         display: none; }
@@ -309,7 +309,7 @@ p {
         margin: 10px 0 0 0;
         width: 250px;
         font-family: "Arial";
-        font-size: 1.5em;
+        font-size: 1.6em;
         color: #666666; }
     #new_invitation #new_invitation_inner #invitation_form .actions {
       float: right;
